//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  posts Post [not null]
  folders Folder [not null]
  wsets Wset [not null]
  role Role [not null]
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  author User
  authorId String
}

Table Folder {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  description String [not null]
  author User
  authorId String
  wsets Wset [not null]
}

Table Wset {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  description String [not null]
  author User
  authorId String
  folder Folder
  folderId String
  words Word [not null]
}

Table Word {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  titleLang String [not null]
  description String [not null]
  descLang String [not null]
  img String [not null]
  audio String [not null]
  wset Wset
  setId String

  indexes {
    (title, titleLang) [unique]
  }
}

Table Xword {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  titleLang String [not null]
  description String [not null]
  descLang String [not null]
  img String [not null]
  audio String [not null]

  indexes {
    (title, titleLang) [unique]
  }
}

Enum Role {
  ADMIN
  USER
}

Ref: Post.authorId > User.id

Ref: Folder.authorId > User.id

Ref: Wset.authorId > User.id

Ref: Wset.folderId > Folder.id

Ref: Word.setId > Wset.id